# fundus-lesions-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fundus_lesions_toolkit/: __init__.py  constants.py
fundus_lesions_toolkit/models/: __init__.py  segmentation.py
fundus_lesions_toolkit/utils/: images.py  visualization.py
lib/fundus_lesions_toolkit/: constants.py
lib/fundus_lesions_toolkit/data/: dataset.py
lib/fundus_lesions_toolkit/losses/: contrastive_loss.py
lib/fundus_lesions_toolkit/models/: __init__.py  checkpoints.py  segmentation.py
lib/fundus_lesions_toolkit/utils/: images.py
notebooks/: counting_lesions.ipynb  crop_&_uncrop.ipynb  segment.ipynb
src/fundus_lesions_toolkit/: constants.py
src/fundus_lesions_toolkit/data/: dataset.py
src/fundus_lesions_toolkit/models/: __init__.py  checkpoints.py  detection.py  hf_hub.py  segmentation.py
src/fundus_lesions_toolkit/utils/: images.py  visualization.py
